[tool.poetry]
name = "taranis"
version = "3.0.0"
description = "Tools for gene-by-gene allele calling analysis"
readme = "README.md"
authors = ["Sara Monzon <smonzon@isciii.es>"]
license = "GNU-3.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
taranis = "taranis.__main__:run_taranis"


[tool.setuptools.packages.find]
exclude = ["img", "virtualenv"]

